<resources>
    <string name="app_name">Unseen IRC</string>


    <!-- NavigationDrawer -->
    <string name="nav_home">Home</string>
    <string name="nav_settings">Settings</string>

    <!-- IrcCreateFragment -->
    <string name="server_hint">Server</string>
    <string name="port_hint">default: 6667</string>
    <string name="channel_hint">#channel #channel2</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">password</string>

    <!-- IrcFragment -->
    <string name="message_hint">Write a message</string>

    <!-- IrcListFragment item -->
    <string name="item_irc_desc">Target Icon</string>
    <string name="item_name">%1$s</string>
    <string name="item_score">Position: %1$d</string>

    <!-- Preference strings -->
    <string name="pref_theme">pref_theme</string>
    <string name="pref_theme_title">Themes</string>
    <string name="pref_themeTypes_default">Default</string>
    <string name="name_hint">Name (Optional)</string>
    <string name="action_save">SAVE</string>

</resources>
