<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:scrollbars="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/name"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:inputType="textPersonName"
            android:hint="@string/name_hint">
        </EditText>

        <EditText
            android:id="@+id/server"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:inputType="textPassword"
            android:hint="@string/server_hint">
        </EditText>

        <EditText
            android:id="@+id/port"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:inputType="number"
            android:hint="@string/port_hint">
        </EditText>

        <EditText
            android:id="@+id/channel"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:hint="@string/channel_hint">
        </EditText>

        <EditText
            android:id="@+id/username"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:inputType="textPersonName"
            android:hint="@string/username_hint">
        </EditText>

        <EditText
            android:id="@+id/password"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:inputType="textPassword"
            android:hint="@string/password_hint">
        </EditText>
    </LinearLayout>
</ScrollView>